src/components/nav/nav.css
.navbar {
  display: flex;
  justify-content: space-around;
  padding: 1.3rem;
  transition: 0.5s ease-in-out;
  position: fixed;
  width: 100%;
  align-items: center;
}

.logo {
  color: var(--accent);
  font-size: var(--font-size-xhuge);
  font-weight: var(--font-weight-bold);
  text-decoration: none;
}

.navbar__logo {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  margin: 1rem;
}

.links {
  display: flex;
  width: 35%;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  font-size: var(--font-size-large);
  font-weight: var(--font-weight-bold);
  transition: 0.5s ease-in-out;
  margin-left: 15rem;
  gap: 1.9rem;
}

.main-link {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}


.l2 {
  display: inline-block;
  transform: translateY(25px);
  transition: transform 0.25s ease-in-out;
  color: var(--accent);
  text-decoration: none;
}

.links__item {
  transition: transform 0.25s ease-in-out;
  transform: translateY(12px);
  overflow: hidden;
  cursor: pointer;
}

.main-link:hover > .links__item {
  transform: translateY(-39px);
}

.main-link:hover > .l2 {
  transform: translateY(-9px);
}

.git-icon {
  margin-top: 0.3rem;
  margin-left: 0.5rem;
  cursor: pointer;
}

.mobile-navbar-btn {
  display: none;
  background: transparent;
  cursor: pointer;
}

.close-menu {
  display: none;
}

.open-menu {
  display: block;
}

/* style for connect buttons*/

.connect-btn{
  width : 4rem;
  height : 4rem;
}

@media (max-width: 950px) {
  .navbar {
    /* position: ; */
    height: 5rem;
    transition: 0.5s ease-in-out;
  }

  #blurry {
    background-color: rgba(38, 37, 39, 0.9); /* 50% transparent */
  }

  #trans {
    background-color: rgba(38, 37, 39, 0.9); /* 50% transparent */
  }

  .mobile-navbar-btn {
    display: block;
  }

  .links {
    display: none;
    /* position: absolute;
    bottom: 5rem; */
    transition: 0.5s ease-in-out;
    /* opacity: 0; */
  }

  /* .links:hover{
    opacity : 1;
  } */

  .active > .mobile-navbar-btn > .close-menu {
    display: block;
  }

  .active > .mobile-navbar-btn > .open-menu {
    display: none;
  }

  .active {
    height: 100vh;
    width: 100%;
    background-color: var(--secondary);
    transition: 0.5s ease-in-out;
  }

  .mobile-navbar-btn {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    margin: 1rem;
  }


  .active > .links {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    height: 100%;
    margin-top: 1rem;
    transition: 0.5s ease-in-out;
    margin-right: 20rem;
    padding: 5rem;
  }
}

.resume-btn {
  background-color: transparent;
  padding: 0.5rem 1rem;
  margin-top: 0.2rem;
  border-radius: 0.25rem;
  font-weight: var(--font-weight-bold);
  transition: 0.5s ease-in-out;
  outline: none;
  border: 2px solid var(--accent);
  color: var(--accent);
  font-size: var(--font-size-large);
  text-decoration: none;
}

.resume-btn:hover {
  background-color: var(--secondary);
  transition: 0.5s ease-in-out;
  cursor: pointer;
}

